    ** DOCUMENTATION and (SETF DOCUMENTATION) now have the correct
       argument precedence order.
  * fixed bug 202: The compiler no longer fails on functions whose
    derived types contradict their declared type.
  * DEFMACRO is implemented via EVAL-WHEN instead of IR1 translation,
    so it can be non-toplevel.
  * The fasl file version number has changed (because of the new
    implementation of DEFMACRO).
  * fixed bugs 46h and 46i: TWO-WAY- and CONCATENATED-STREAM creation
    functions now check the types of their inputs as required by ANSI.
  * fixed bug 48c: SYMBOL-MACROLET signals PROGRAM-ERROR when an
    introduced symbol is DECLAREd to be SPECIAL.
  * fixed reading of (COMPLEX DOUBLE-FLOAT) literals from fasl files
  * fixed bug: :COUNT argument to sequence functions may be negative
  * fixed bug: body of DO-SYMBOLS may contain declarations
  * fixed bug: PUSHNEW now evaluates its arguments from left to right
    (reported by Paul F. Dietz, fixed by Gerd Moellman)
  * fixed bug: PUSH, PUSHNEW and POP now evaluate a place given by a
    symbol macro only once
  * fixed printing of call frame when argument list is unavailable
  * fixed bug: :ALLOW-OTHER-KEYS is an allowed keyword name

planned incompatible changes in 0.7.x:
* When the profiling interface settles down, maybe in 0.7.x, maybe
  later, it might impact TRACE. They both encapsulate functions, and
  it's not clear yet how e.g. UNPROFILE will interact with TRACE
  and UNTRACE. (This shouldn't matter, though, unless you are
  using profiling. If you never profile anything, TRACE should
  continue to behave as before.)
* Inlining can now be controlled the ANSI way, without
  MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
  now does what ANSI says it should. The CMU-CL-style 
  SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.